--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 .navbar {
     display: flex;
     align-items: center;
-    background-color: #333;
+    background-color: white;
     padding: 10px;
     position: fixed;
     width: 100%;
@@ -17,28 +17,28 @@ body {
 }
 
 .navbar-logo {
-    color: white;
+    color: black;
     text-decoration: none;
     font-size: 24px;
     margin-right: auto;
 }
 
 .navbar a {
-    color: white;
+    color: black;
     text-decoration: none;
     padding: 14px 20px;
 }
 
 .navbar a:hover {
-    background-color: #575757;
+    background-color: #f0f0f0;
 }
 
 .div1 {
     position: relative;
     height: 400px;
-    background-image: url('../images/div1.jpg'); /* Update the path to your image */
+    background-image: url('../images/div1.jpg'); /* Update the path to the image */
     background-size: cover;
-    background-position: top;
+    background-position: center;
     margin-top: 60px; /* To account for the fixed navbar */
 }
 
@@ -74,4 +74,29 @@ body {
 .search-section .btn {
     border-radius: 10px;
     height: 45px;
+    width: 100%;
+}
+
+@media (min-width: 769px) {
+    .search-section .form-row .form-group {
+        flex: 1;
+    }
+    .search-section .btn {
+        height: 45px;
+        margin-left: 10px;
+        width: auto;
+        flex: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .search-section .form-row .form-group {
+        display: none;
+    }
+    .search-section .btn {
+        display: block;
+        width: 100%;
+        height: 50px;
+        font-size: 18px;
+    }
 }
