--- a/css/styles.css
+++ b/css/styles.css
@@ -33,10 +33,18 @@ body {
     background-color: #f0f0f0;
 }
 
+.navbar-toggler {
+    border-color: rgba(0, 0, 0, 0.1);
+}
+
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
 .div1 {
     position: relative;
     height: 400px;
-    background-image: url('../images/div1.jpg'); /* Update the path to the image */
+    background-image: url('../images/div1.jpg'); /* Update the path to your image */
     background-size: cover;
     background-position: center;
     margin-top: 60px; /* To account for the fixed navbar */
@@ -64,6 +72,7 @@ body {
 
 .search-section .form-group {
     margin-bottom: 20px;
+    margin-right: 20px;
 }
 
 .search-section .form-control {
