--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ body {
 .div1 {
     position: relative;
     height: 400px;
-    background-image: url('../images/div1.jpg'); /* Update the path to your image */
+    background-image: url('../images/div1.jpg');
     background-size: cover;
     background-position: center;
     margin-top: 60px; /* To account for the fixed navbar */
@@ -52,8 +52,8 @@ body {
 
 .div2 {
     position: relative;
-    top: -50px; /* Adjust to overlap div1 */
-    margin: 0 20px;
+    top: -80px; /* Adjust to overlap div1 */
+    margin: 0 100px;
     background-color: white;
     padding: 20px;
     border-radius: 10px;
@@ -62,7 +62,7 @@ body {
 }
 
 .search-section {
-    padding: 20px;
+    padding: 0;
 }
 
 .search-section h1 {
@@ -84,6 +84,34 @@ body {
     border-radius: 10px;
     height: 45px;
     width: 100%;
+}
+
+.search-lifestyle-section h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+.lifestyle-menu {
+    display: flex;
+    overflow-x: auto;
+    gap: 20px;
+}
+
+.lifestyle-item {
+    flex: 0 0 auto;
+    text-align: center;
+}
+
+.lifestyle-item img {
+    width: 100px;
+    height: auto;
+    border-radius: 10px;
+}
+
+.lifestyle-item span {
+    display: block;
+    margin-top: 5px;
+    font-size: 14px;
 }
 
 @media (min-width: 769px) {
