--- a/css/styles.css
+++ b/css/styles.css
@@ -53,20 +53,20 @@ body {
 .div2 {
     position: relative;
     top: -80px; /* Adjust to overlap div1 */
-    margin: 0 100px;
+    margin: 0 70px;
     background-color: white;
-    padding: 20px;
+    padding: 10px; /* Adjust padding as required */
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     z-index: 1;
 }
 
 .search-section {
-    padding: 0;
+    padding: 10px; /* Adjust padding as required */
 }
 
 .search-section h1 {
-    font-size: 24px;
+    font-size: 32px;
     margin-bottom: 20px;
 }
 
@@ -77,17 +77,19 @@ body {
 
 .search-section .form-control {
     border-radius: 10px;
-    height: 45px;
+    height: 50px;
+    font-size: 18px;
 }
 
 .search-section .btn {
     border-radius: 10px;
-    height: 45px;
+    height: 50px;
+    font-size: 18px;
     width: 100%;
 }
 
 .search-lifestyle-section h1 {
-    font-size: 24px;
+    font-size: 32px;
     margin-bottom: 20px;
 }
 
@@ -103,7 +105,7 @@ body {
 }
 
 .lifestyle-item img {
-    width: 100px;
+    width: 120px;
     height: auto;
     border-radius: 10px;
 }
@@ -111,7 +113,7 @@ body {
 .lifestyle-item span {
     display: block;
     margin-top: 5px;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 @media (min-width: 769px) {
@@ -119,7 +121,7 @@ body {
         flex: 1;
     }
     .search-section .btn {
-        height: 45px;
+        height: 50px;
         margin-left: 10px;
         width: auto;
         flex: none;
